--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 	padding: 0;
 	text-align: left;
 /*	font-family: Baskerville, "Palatino Linotype", Palatino, "Century Schoolbook L", "Times New Roman", serif; */
-	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif, SimSun, "Microsoft Yahei";
 	font-size: 16px;
 	color: #000000;
 	background: #FFFFFF;
@@ -55,7 +55,7 @@ padding-top:10px;
 
 #main
 {
-width:900px;
+width:1000px;
 height:auto;
 }
 
